--- a/experience.html
+++ b/experience.html
@@ -23,6 +23,7 @@
 		<div class="desc">
                 <h1 class="company"> Company Name </h1>
                 <h2 class="role"> Role/Position </h2>
+				<p class="exp"> text </p>
                 </div>
 	    </div>
             <div id="years">
@@ -71,4 +72,5 @@
         </div>
         
 	</body>
+
 </html>
