--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
                 <img src="portrait.jpeg" alt="profile picture">
                 <h1 style="padding: 5px; margin-bottom: 5px;"> MILEAH ZOEI DY </h1>
                 <p style="font-size:30px;"> Web Developer </p>
-		<a href="index.html">Resume</a>
-		<a href="experience.html">Work Experience</a>
+            </div>
+            <div id="links">
+                <a href="index.html">Resume</a>
+		        <a href="experience.html">Work Experience</a>
             </div>
         </div>
 
