--- a/experience.html
+++ b/experience.html
@@ -8,8 +8,10 @@
         <div class="profile">
             <div id="name">
                 <h1 style="padding: 5px; margin-bottom: 5px;"> WORK EXPERIENCE </h1>
-		<a href="index.html">Resume</a>
-		<a href="experience.html">Work Experience</a>
+            </div>
+            <div id="links">
+                <a href="index.html">Resume</a>
+		        <a href="experience.html">Work Experience</a>
             </div>
         </div>
 
