edit all and design

--- a/experience.html
+++ b/experience.html
@@ -10,69 +10,67 @@
                 <h1 style="padding: 5px; margin-bottom: 5px;"> WORK EXPERIENCE </h1>
             </div>
             <div id="links">
-                <a href="index.html">Resume</a>
-		        <a href="experience.html">Work Experience</a>
+                <a href="index.html">RESUME</a>
+		        <a href="experience.html">WORK EXPERIENCE</a>
             </div>
         </div>
 
-        <div class="main">
-	    <div class="job">
-			<div class="years">
-                <h2 class="range"> dd/mm/yy - dd/mm/yy </h2>
-                <p class="loc"> Location, X City </p>
-            </div>
-
-			<div class="desc">
-                <h1 class="company"> Company Name </h1>
-                <h2 class="role"> Role/Position </h2>
-				<p class="exp"> text </p>
-            </div>
-	    </div>
-            <div id="years">
-                <div>
-                <h2 class="range"> dd/mm/yy - dd/mm/yy </h2>
-                <p class="loc"> Location, X City </p>
+        <div class="main_work">
+            <div class="job">
+                <div class="years">
+                    <h2 class="range"> <br><br><br> January 2027 &mdash; October 2027 </h2>
+                    <p class="loc"> Quezon City, Philippines </p>
                 </div>
 
-                <div style="margin-top:60px;">
-                <h2 class="range"> dd/mm/yy - dd/mm/yy </h2>
-                <p class="loc"> Location, X City </p>
-                </div>
-
-                <div style="margin-top:60px;">
-                <h2 class="range"> dd/mm/yy - dd/mm/yy </h2>
-                <p class="loc"> Location, X City </p>
+                <div class="desc">
+                    <h1 class="company"> M2.0 Communications Inc. </h1>
+                    <h2 class="role"> Web Developer Intern </h2>
+                    <ul>
+                        <li class="exp"> Assisted in maintaining client pages using HTML, CSS, and JavaScript. </li>
+                        <li class="exp"> Collaborated with interns and senior developers to create and deploy web applications. </li>
+                        <li class="exp"> Selected as top performing intern. </li>
+                    </ul>
                 </div>
             </div>
-            <div id="work">
-                <h1> Company Name </h1>
-                <h2> Role/Position </h2>
-                
-                <h1 style="margin-top:60px;"> Education </h1>
-                <div class="education">
-                    <p class="edu1"> Bachelor of Science in Computer Engineering (2023 &mdash; 2027)</p>
-                    <p class="edu2"> University of San Carlos, Cebu City, Philippines </p>
+            <div class="timeline-circle"></div>
+            <div class="job">
+                <div class="years">
+                    <h2 class="range"> <br><br><br> January 2028 &mdash; August 2031 </h2>
+                    <p class="loc"> Makati City, Philippines </p>
                 </div>
 
-                <div class="education">
-                    <p class="edu1"> Higher Secondary Education STEM (2021 &mdash; 2023)</p>
-                    <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
+                <div class="desc">
+                    <h1 class="company"> MCS Philippines </h1>
+                    <h2 class="role"> Web and API QA Engineer</h2>
+                    <ul >
+                        <li class="exp"> Tested responsive design across mobile, desktop, and tablet platforms. </li>
+                        <li class="exp"> Identified and resolved bugs and issues in backend data processing. </li>
+                        <li class="exp"> Created detailed test cases and test plans in Azure DevOps, and documented bugs with reproduction steps. </li>
+                        <li class="exp"> Contributed to test automation and integration testing. </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="timeline-circle2"></div>
+            <div class="job">
+                <div class="years">
+                    <h2 class="range"> <br><br><br> September 2031 &mdash; December 2034 </h2>
+                    <p class="loc"> Makati City, Philippines </p>
                 </div>
 
-                <div>
-                    <p class="edu1"> High School Education (2017 &mdash; 2021)</p>
-                    <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
+                <div class="desc">
+                    <h1 class="company"> Gluon Consulting Pte. Ltd. </h1>
+                    <h2 class="role"> Senior Web and Mobile QA Engineer</h2>
+                    <ul>
+                        <li class="exp"> Implemented manual and automated testing across multiple web and mobile applications. </li>
+                        <li class="exp"> Wrote and maintained comprehensive test cases for web and mobile applications. </li>
+                        <li class="exp"> Worked with developers, product managers, and stakeholders. </li>
+                        <li class="exp"> Worked across full testing lifecycle, from test design, execution, and reporting. </li>
+                    </ul>
                 </div>
-
-                <h1 style="margin-top:60px;"> Achievements </h1>
-                <ul>
-                    <li> 3rd Ranking First Year Student for the Second Semester in the School of Engineering S.Y. 2023-2024 </li>
-                    <li> 2nd Ranking First Year Student in BS CpE S.Y. 2023-2024 </li>
-                    <li> Participation in the Robotek Competition 2019 </li>
-                </ul>
             </div>
         </div>
-        
+
+        <div style="background-color:darkslategray; height: 30px; border-top: 4px solid antiquewhite;"></div>
 	</body>
 
 </html>
