--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
 	</head>
 	<body>
         <div class="profile">
-            <div id="name">
+            <div class="header">
                 <img src="portrait.jpeg" alt="profile picture">
-                <h1 style="padding: 5px; margin-bottom: 5px;"> MILEAH ZOEI DY </h1>
-                <p style="font-size:30px;"> Web Developer </p>
+                <div id="name">
+                    <h1 style="padding: 5px; margin-bottom: 5px;"> MILEAH ZOEI DY </h1>
+                    <p style="font-size:30px;"> Web Developer </p>
+                </div>    
             </div>
+
             <div id="links">
-                <a href="index.html">Resume</a>
-		        <a href="experience.html">Work Experience</a>
+                <a href="index.html">RESUME</a>
+		        <a href="experience.html">WORK EXPERIENCE</a>
             </div>
         </div>
 
         <div class="main">
             <div id="contact">
                 <div>
-                <h3> CONTACT INFO </h3>
+                <h3 class="geninfoh"> CONTACT INFO </h3>
                 <p> mileahzoeiody@gmail.com </p>
                 <p> 0927-536-5475 </p>
                 <p> Cebu City, Philippines </p>
                 </div>
 
                 <div style="margin-top:60px;">
-                <h3> SKILLS </h3>
+                <h3 class="geninfoh"> SKILLS </h3>
                 <p class="skill"> Diligent </p>
                 <p class="skill"> Goal-oriented </p>
                 <p class="skill"> Quick Learner </p>
                 </div>
 
                 <div style="margin-top:60px;">
-                <h3> PROGRAMMING </h3>
+                <h3 class="geninfoh"> PROGRAMMING </h3>
                 <ul style="margin:10px 80px;">
                     <li> C </li>
                     <li> Java </li>
@@ -45,8 +48,8 @@
                 </div>
             </div>
             <div id="about">
-                <h1> Objective </h1>
-                <p style="margin: auto 100px; font-size: 20px;"> Computer Engineering student with a passion for programming and motivation for problem-solving, seeking to establish a web developer role and contribute to creating web applications, while gaining work experience and improving technical skills. </p>
+                <h1> About Me </h1>
+                <p style="margin: auto 100px;"> Computer Engineering graduate with a passion for programming and motivation for problem-solving, seeking to establish a web developer role and contribute to creating web applications, while gaining work experience and improving technical skills. </p>
                 
                 <h1 style="margin-top:60px;"> Education </h1>
                 <div class="education">
@@ -72,6 +75,8 @@
                 </ul>
             </div>
         </div>
+
+        <div style="background-color:darkslategray; height: 30px; border-top: 4px solid antiquewhite;"></div>
         
 	</body>
 </html>
