--- a/index.html
+++ b/index.html
@@ -48,31 +48,35 @@
                 </div>
             </div>
             <div id="about">
-                <h1> About Me </h1>
-                <p style="margin: auto 100px;"> Computer Engineering graduate with a passion for programming and motivation for problem-solving, seeking to establish a web developer role and contribute to creating web applications, while gaining work experience and improving technical skills. </p>
-                
-                <h1 style="margin-top:60px;"> Education </h1>
-                <div class="education">
-                    <p class="edu1"> Bachelor of Science in Computer Engineering (2023 &mdash; 2027)</p>
-                    <p class="edu2"> University of San Carlos, Cebu City, Philippines </p>
+                <div style="background-color: rgba(28, 36, 38, 0.919); padding: 30px 0;">
+                    <h1> About Me </h1>
+                    <p style="margin: auto 100px;"> Computer Engineering graduate with a passion for programming and motivation for problem-solving, seeking to establish a web developer role and contribute to creating web applications, while gaining work experience and improving technical skills. </p>
                 </div>
+                <div style="background-color: rgba(58, 87, 93, 0.332); padding: 30px 0;">    
+                    <h1> Education </h1>
+                    <div class="education">
+                        <p class="edu1"> Bachelor of Science in Computer Engineering (2023 &mdash; 2027)</p>
+                        <p class="edu2"> University of San Carlos, Cebu City, Philippines </p>
+                    </div>
 
-                <div class="education">
-                    <p class="edu1"> Higher Secondary Education STEM (2021 &mdash; 2023)</p>
-                    <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
+                    <div class="education">
+                        <p class="edu1"> Higher Secondary Education STEM (2021 &mdash; 2023)</p>
+                        <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
+                    </div>
+
+                    <div>
+                        <p class="edu1"> High School Education (2017 &mdash; 2021)</p>
+                        <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
+                    </div>
                 </div>
-
-                <div>
-                    <p class="edu1"> High School Education (2017 &mdash; 2021)</p>
-                    <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
-                </div>
-
-                <h1 style="margin-top:60px;"> Achievements </h1>
-                <ul>
-                    <li> 3rd Ranking First Year Student for the Second Semester in the School of Engineering S.Y. 2023-2024 </li>
-                    <li> 2nd Ranking First Year Student in BS CpE S.Y. 2023-2024 </li>
-                    <li> Participation in the Robotek Competition 2019 </li>
-                </ul>
+                <div style="background-color: rgba(119, 183, 204, 0.281); padding: 30px 0;">
+                    <h1> Achievements </h1>
+                    <ul>
+                        <li> 3rd Ranking First Year Student for the Second Semester in the School of Engineering S.Y. 2023-2024 </li>
+                        <li> 2nd Ranking First Year Student in BS CpE S.Y. 2023-2024 </li>
+                        <li> Participation in the Robotek Competition 2019 </li>
+                    </ul>
+                </div>  
             </div>
         </div>
 
