remove circles in exp html

--- a/experience.html
+++ b/experience.html
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="timeline-circle"></div>
+            <!-- <div class="timeline-circle"></div> -->
             <div class="job">
                 <div class="years">
                     <h2 class="range"> <br><br><br> January 2028 &mdash; August 2031 </h2>
@@ -50,7 +50,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="timeline-circle2"></div>
+            <!-- <div class="timeline-circle2"></div> -->
             <div class="job">
                 <div class="years">
                     <h2 class="range"> <br><br><br> September 2031 &mdash; December 2034 </h2>
