changed languages format, edited about to flex, removed fixed width in work exp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title> Resume </title>
 		<link rel="stylesheet" href="stylesheets.css">
+        <script src="https://kit.fontawesome.com/ed5ab44584.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
         <div class="profile">
@@ -38,17 +39,63 @@
 
                 <div style="margin-top:60px;">
                 <h3 class="geninfoh"> PROGRAMMING </h3>
-                <ul style="margin:10px 80px;">
+                <!--<ul style="margin:10px 80px;">
                     <li> C </li>
                     <li> Java </li>
                     <li> Assembly </li>
                     <li> HTML </li> 
                     <li> CSS </li>
-                </ul>
+                </ul>-->
+                    <div id="prog">
+                        <div class="lang"> 
+                            <p> C </p>
+                            <p> Java </p>
+                            <p> HTML </p>
+                            <p> CSS </p>
+                            <p> Assembly </p>
+                        </div>
+                        <div class="lang_score"> 
+                            <p>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                            </p>
+                            <p> 
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                            </p>
+                            <p> 
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-regular fa-circle" style="color: rgb(245, 245, 245);"></i>
+                            </p>
+                            <p> 
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-regular fa-circle" style="color: rgb(245, 245, 245);"></i>
+                            </p>
+                            <p> 
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-solid fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-regular fa-circle" style="color: rgb(245, 245, 245);"></i>
+                                <i class="fa-regular fa-circle" style="color: rgb(245, 245, 245);"></i>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="about">
-                <div style="background-color: rgba(28, 36, 38, 0.919); padding: 30px 0;">
+                <div style="background-color: rgba(28, 36, 38, 0.919); padding: 40px 0;">
                     <h1> About Me </h1>
                     <p style="margin: auto 100px;"> Computer Engineering graduate with a passion for programming and motivation for problem-solving, seeking to establish a web developer role and contribute to creating web applications, while gaining work experience and improving technical skills. </p>
                 </div>
@@ -69,7 +116,7 @@
                         <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
                     </div>
                 </div>
-                <div style="background-color: rgba(119, 183, 204, 0.281); padding: 30px 0;">
+                <div style="background-color: rgba(119, 183, 204, 0.281); padding: 50px 0;">
                     <h1> Achievements </h1>
                     <ul>
                         <li> 3rd Ranking First Year Student for the Second Semester in the School of Engineering S.Y. 2023-2024 </li>
