fixed css formatting, fixed circle timeline, added icons

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div id="contact">
                 <div>
                 <h3 class="geninfoh"> CONTACT INFO </h3>
-                <p> mileahzoeiody@gmail.com </p>
-                <p> 0927-536-5475 </p>
-                <p> Cebu City, Philippines </p>
+                <p class="geninfop"> <i class="fa-solid fa-envelope-open" style="color: rgb(163, 181, 199);"></i> mileahzoeiody@gmail.com </p>
+                <p class="geninfop"> <i class="fa-solid fa-address-book" style="color: rgb(163, 181, 199);"></i> 0927-536-5475 </p>
+                <p class="geninfop"> <i class="fa-solid fa-location-dot" style="color: rgb(163, 181, 199);"></i> Cebu City, Philippines </p>
                 </div>
 
                 <div style="margin-top:60px;">
@@ -39,13 +39,7 @@
 
                 <div style="margin-top:60px;">
                 <h3 class="geninfoh"> PROGRAMMING </h3>
-                <!--<ul style="margin:10px 80px;">
-                    <li> C </li>
-                    <li> Java </li>
-                    <li> Assembly </li>
-                    <li> HTML </li> 
-                    <li> CSS </li>
-                </ul>-->
+                
                     <div id="prog">
                         <div class="lang"> 
                             <p> C </p>
@@ -102,17 +96,17 @@
                 <div style="background-color: rgba(58, 87, 93, 0.332); padding: 30px 0;">    
                     <h1> Education </h1>
                     <div class="education">
-                        <p class="edu1"> Bachelor of Science in Computer Engineering (2023 &mdash; 2027)</p>
+                        <p class="edu1"> <i class="fa-solid fa-graduation-cap" style="color: lightgray;"></i> Bachelor of Science in Computer Engineering (2023 &mdash; 2027)</p>
                         <p class="edu2"> University of San Carlos, Cebu City, Philippines </p>
                     </div>
 
                     <div class="education">
-                        <p class="edu1"> Higher Secondary Education STEM (2021 &mdash; 2023)</p>
+                        <p class="edu1"> <i class="fa-solid fa-book" style="color: lightgray;"></i> Higher Secondary Education STEM (2021 &mdash; 2023)</p>
                         <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
                     </div>
 
                     <div>
-                        <p class="edu1"> High School Education (2017 &mdash; 2021)</p>
+                        <p class="edu1"> <i class="fa-solid fa-pencil" style="color: lightgray;"></i> High School Education (2017 &mdash; 2021)</p>
                         <p class="edu2"> Philippine Christian Gospel School, Cebu City, Philippines </p>
                     </div>
                 </div>
