--- a/experience.html
+++ b/experience.html
@@ -3,6 +3,7 @@
 	<head>
 		<title> Work Experience </title>
 		<link rel="stylesheet" href="stylesheets.css">
+        <script src="https://kit.fontawesome.com/ed5ab44584.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
         <div class="profile">
@@ -19,7 +20,7 @@
             <div class="job">
                 <div class="years">
                     <h2 class="range"> <br><br><br> January 2027 &mdash; October 2027 </h2>
-                    <p class="loc"> Quezon City, Philippines </p>
+                    <p class="loc"> <i class="fa-solid fa-location-dot" style="color: rgb(163, 181, 199);"></i> Quezon City, Philippines </p>
                 </div>
 
                 <div class="desc">
@@ -32,11 +33,11 @@
                     </ul>
                 </div>
             </div>
-            <!--<div class="timeline-circle"></div>-->
+            <div class="timeline-circle"></div>
             <div class="job">
                 <div class="years">
                     <h2 class="range"> <br><br><br> January 2028 &mdash; August 2031 </h2>
-                    <p class="loc"> Makati City, Philippines </p>
+                    <p class="loc"> <i class="fa-solid fa-location-dot" style="color: rgb(163, 181, 199);"></i> Makati City, Philippines </p>
                 </div>
 
                 <div class="desc">
@@ -50,11 +51,11 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="timeline-circle2"></div> -->
+            <div class="timeline-circle"></div>
             <div class="job">
                 <div class="years">
                     <h2 class="range"> <br><br><br> September 2031 &mdash; December 2034 </h2>
-                    <p class="loc"> Makati City, Philippines </p>
+                    <p class="loc"> <i class="fa-solid fa-location-dot" style="color: rgb(163, 181, 199);"></i> Makati City, Philippines </p>
                 </div>
 
                 <div class="desc">
