edited hover animations, change icon, background gradient

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div>
                 <h3 class="geninfoh"> CONTACT INFO </h3>
                 <p class="geninfop"> <i class="fa-solid fa-envelope-open" style="color: rgb(163, 181, 199);"></i> mileahzoeiody@gmail.com </p>
-                <p class="geninfop"> <i class="fa-solid fa-address-book" style="color: rgb(163, 181, 199);"></i> 0927-536-5475 </p>
+                <p class="geninfop"> <i class="fa-solid fa-phone" style="color: rgb(163, 181, 199);"></i> 0927-536-5475 </p>
                 <p class="geninfop"> <i class="fa-solid fa-location-dot" style="color: rgb(163, 181, 199);"></i> Cebu City, Philippines </p>
                 </div>
 
@@ -90,11 +90,12 @@
             </div>
             <div id="about">
                 <div style="background-color: rgba(28, 36, 38, 0.919); padding: 40px 0;">
-                    <h1> About Me </h1>
+                    <h1 class="hov"> <span class="hov">About Me</span> </h1>
+                    
                     <p style="margin: auto 100px;"> Computer Engineering graduate with a passion for programming and motivation for problem-solving, seeking to establish a web developer role and contribute to creating web applications, while gaining work experience and improving technical skills. </p>
                 </div>
                 <div style="background-color: rgba(58, 87, 93, 0.332); padding: 30px 0;">    
-                    <h1> Education </h1>
+                    <h1> <span class="hov">Education</span></h1>
                     <div class="education">
                         <p class="edu1"> <i class="fa-solid fa-graduation-cap" style="color: lightgray;"></i> Bachelor of Science in Computer Engineering (2023 &mdash; 2027)</p>
                         <p class="edu2"> University of San Carlos, Cebu City, Philippines </p>
@@ -111,7 +112,7 @@
                     </div>
                 </div>
                 <div style="background-color: rgba(119, 183, 204, 0.281); padding: 50px 0;">
-                    <h1> Achievements </h1>
+                    <h1> <span class="hov">Achievements</span> </h1>
                     <ul>
                         <li> 3rd Ranking First Year Student for the Second Semester in the School of Engineering S.Y. 2023-2024 </li>
                         <li> 2nd Ranking First Year Student in BS CpE S.Y. 2023-2024 </li>
